--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Rel-X</h1>
     <h3>TOUHIDUL ISLAM CHAYAN</h3>
-    <audio src="/audio/5sG draft.m4a"></audio>
+    <audio id="audio" src="/audio/5sG draft.m4a"></audio>
     <div class="btn-container">
         <a href="" id="play" class="button1 bouncy"><i class="fa fa-play" aria-hidden="true"></i>
         </a>
